Initial revrite of skeleton to JavaFX, need cleanup and testing